Finished grid explanation, tweaked various other explanations slightly

--- a/abschnitte/webprojekte/html_erklaerung/styles/explain.css
+++ b/abschnitte/webprojekte/html_erklaerung/styles/explain.css
@@ -24,6 +24,10 @@ text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
 color:#2e86c1;
 margin-bottom: 0px;
 }
+.explain h3{
+color:#1e5880;
+margin-bottom: 0px;
+}
 
 .explain p{
 margin-top: 5px;
