--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,28 @@ body{
 	font-family: 'Consolas', 'Roboto Mono', 'Lucida Console', sans-serif;
 	height: 100vh;
 }
+/*Various elements*/
 a{
 	text-decoration: none;
+}
+ul{
+	padding: 6px;
+	padding-left: 8px;
+	border-left: 1px dashed grey;
+	border-radius: 13px;
+}
+li{
+	list-style-type: none;
+}
+li:not(:first-child){
+	margin-top: 10px;
+}
+li.explanation{
+	margin-top: 0px;
+}
+img.websitelogo{
+	height: 40px;
+	margin-right: 8px;
 }
 
 /*Inside card*/
@@ -32,6 +52,7 @@ a{
 #content h2{
 	white-space: nowrap;
 }
+/*Navigation*/
 #nav{
 	display: flex;
 	justify-content: space-between;
@@ -43,21 +64,30 @@ a{
 	list-style: none;
 	font-family: 'Courier New', Courier, monospace;
 }
+ul#nav{
+	border-style: none;
+}
 #nav li{
+	margin: 0;
 	text-align: center;
-	border: 2px rgba(255, 255, 255, 0.746) outset;
-	width: 1.8em; /*roughly square-shaped*/
 }
 #nav li a{
 	/*Make clickable area bigger*/
 	display: inline-block; 
 	padding: 0 9px 0 9px;
 
-	font-size: 1.8em;
+	font-size: 2.3em;
 	font-weight: bold;
 
 	-webkit-text-stroke: 1px black;
 	color: white;
+}
+#nav li a:hover{
+	color: rgb(130, 255, 168);
+}
+#nav li a:focus{
+	outline: none;
+	color: rgb(130, 255, 168);
 }
 
 /*Card itself*/
@@ -95,15 +125,6 @@ main{
 	align-items: center; /*Dist along cross axis*/
 }
 
-/*Specific elements*/
-li.explanation{
-	list-style: none;
-}
-img.websitelogo{
-	height: 40px;
-	margin-right: 8px;
-
-}
 
 #cardshadow{
 	width: 95%;
