Added Arrow Key Navigation
I listen for keypresses and with the help of jquery and the tabbable plugin I select the next or previous elements in tabindex

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@ body{
 a{
 	text-decoration: none;
 }
+a:focus{
+	outline: none;
+	color:rgb(0, 240, 0);
+}
+a:focus > img.websitelogo{
+	position: relative;
+	bottom: 12px;
+}
 ul{
 	padding: 6px;
 	padding-left: 8px;
